Refactor interface generation
