# src/users/controllers/users.controller.ts
@@ -3,9 +3,9 @@ import { UsersService } from '../services/users.service';
 import argon2 from 'argon2';
 import debug from 'debug';
 import { Service } from 'typedi';
-import { NotFoundError } from '../../generatedModels/NotFoundError.generated';
-import { CreateUser } from '../../generatedModels/CreateUser.generated';
-import { PatchUser } from '../../generatedModels/PatchUser.generated';
+import { NotFoundError } from '../../generated/models/NotFoundError.generated';
+import { CreateUser } from '../../generated/models/CreateUser.generated';
+import { PatchUser } from '../../generated/models/PatchUser.generated';
 
 const log: debug.IDebugger = debug('app:users-controller');
 
